Auto-link Supabase via global defaults and URL params

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js" defer></script>
     <!-- Firebase compat SDKs -->
+    <script>
+      window.SUPABASE_URL = 'https://hqsqpznodhqnqfiikttw.supabase.co';
+      window.SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhxc3Fwem5vZGhxbnFmaWlrdHR3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUwMTU0NzIsImV4cCI6MjA4MDU5MTQ3Mn0.egcNKnibbyAYvRqF2Q0EeGLAnMWwmRlL65S_5qMwRZ4';
+    </script>
     <script src="local-db.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/supabase.js" defer></script>
     <script src="supabase-db.js" defer></script>
